implement data components for MOST new nbt uses